# Cadence-Virtuoso-VCSV-Parser

./: README.md  pyproject.toml  setup.py  vcsv_parser.py
examples/: example_simple.ipynb  example_sliders.ipynb  test_burst.vcsv
vcsv_parser/: __init__.py  vcsv_parser.py
